[package]
name = "pbkdf2"
version = "0.7.0"
authors = ["RustCrypto Developers"]
license = "MIT OR Apache-2.0"
description = "Generic implementation of PBKDF2"
documentation = "https://docs.rs/pbkdf2"
repository = "https://github.com/RustCrypto/password-hashes/tree/master/pbkdf2"
keywords = ["crypto", "password", "hashing"]
categories = ["cryptography", "no-std"]
edition = "2018"
readme = "README.md"

[dependencies]
crypto-mac = { git = "https://github.com/fortelabsinc/traits", rev="ca0ea3064459418a7a8f9945a5eda178982ad260" }

rayon = { version = "1", optional = true }
base64ct = { git = "https://github.com/fortelabsinc/utils", rev="1354e0bcd3d4b818ca9c1c889f9be60978395e37", default-features = false, features = ["alloc"], optional = true  }
hmac = { git = "https://github.com/fortelabsinc/MACs", rev="2f03bfabc56cfc6c2739acb9659fb3b8e0d3ac0e", default-features = false, optional = true }
password-hash = { git = "https://github.com/fortelabsinc/traits", rev="929f5c96fa782b3d5514abdc29fe0f68663bf8b6", default-features = false, features = ["alloc"], optional = true }
sha1 = { version = "0.9", package = "sha-1", default-features = false, optional = true }
sha2 = { version = "0.9", default-features = false, optional = true }

[dev-dependencies]
hex-literal = "0.3"
hmac = { git = "https://github.com/fortelabsinc/MACs", rev="2f03bfabc56cfc6c2739acb9659fb3b8e0d3ac0e"}
sha1 = { version = "0.9", package = "sha-1" }
sha2 = "0.9"

[features]
default = ["simple"]
parallel = ["rayon", "std"]
simple = ["sha2", "hmac", "password-hash", "base64ct"]
std = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
