[package]
name = "scrypt"
version = "0.6.0-pre"
authors = ["RustCrypto Developers"]
license = "MIT OR Apache-2.0"
description = "Scrypt password-based key derivation function"
documentation = "https://docs.rs/scrypt"
repository = "https://github.com/RustCrypto/password-hashes/tree/master/scrypt"
keywords = ["crypto", "password", "hashing"]
categories = ["cryptography"]
edition = "2018"
readme = "README.md"

[dependencies]
base64 = { version = "0.13", default-features = false, features = ["alloc"], optional = true }
hmac = { git = "https://github.com/fortelabsinc/MACs", rev="2f03bfabc56cfc6c2739acb9659fb3b8e0d3ac0e"}
pbkdf2 = { version = "0.7", default-features = false, path = "../pbkdf2" }
rand_core = { version = "0.6", default-features = false, features = ["getrandom"], optional = true }
rand = { version = "0.8", default-features = false, optional = true }
salsa20 = { version = "0.7.2", default-features = false, features = ["expose-core"] }
sha2 = { version = "0.9", default-features = false }
subtle = { version = "2", default-features = false, optional = true }

[features]
default = ["simple", "thread_rng", "std"]
simple = ["rand_core", "base64", "subtle"]
thread_rng = ["rand"]
std = []
