[package]
name = "scrypt"
version = "0.2.0"
authors = ["RustCrypto Developers"]
license = "MIT OR Apache-2.0"
description = "Scrypt password-based key derivation function"
documentation = "https://docs.rs/scrypt"
repository = "https://github.com/RustCrypto/password-hashing"
keywords = ["crypto", "password", "hashing"]
categories = ["cryptography"]

[dependencies]
sha2 = { version = "0.8", default-features = false }
pbkdf2 = { git = "https://github.com/fortelabsinc/password-hashes", rev="1109c9810c492cb15a6da31a6a5a50de026d759a", default-features = false }
hmac = { git = "https://github.com/fortelabsinc/MACs", rev="5d5702ab28f1882db6803cc4f5d91cd442f07267" }
byte-tools = "0.3"
byteorder = { version = "1", default-features = false }

subtle = { version = "1", default-features = false , optional = true }
base64 = { version = "0.9", optional = true }
rand = { version = "0.5", optional = true }

[features]
default = ["include_simple"]
include_simple = ["rand", "base64", "subtle"]

[badges]
travis-ci = { repository = "RustCrypto/password-hashing" }
